fix Objects Encoding